# dga_analise_conteudo

./: 20240929_Scopus.bib  20240929_Scopus_pre_processado.bib  20240929_WoS.bib  20240929_WoS_.bib  20240929_WoS_completo.bib  README.md  diferenca.py  extrair_resumos_iramuteq.py  iramuteq_formatado.txt  mesclar_bib.py  pyproject.toml  referencial_unificado.bib  requirements-dev.txt  requirements.txt  scopus.bib  verifica_doi.py  wos.bib
