[project]
name = "artigo-resultado"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.7"
dependencies = [
    "bibtexparser>=1.4.2",
    "chardet>=5.2.0",
    "spacy>=3.8.2",
    "unidecode>=1.3.8",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=8.29.0",
    "ruff>=0.7.2",
]
